@@ -55,6 +55,7 @@
 #include <debug.h>
 
 #include <net/if.h>
+#include <arpa/inet.h>
 #include <netinet/in.h>
 
 #include <apps/netutils/netlib.h>
